_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    padding-top: 1em;
    padding-bottom: 4.5em;
    min-height: 56px;

    // Positioning context for the mobile navigation icon
    position: relative;
}

.site-title {
    font-size: 26px;
    line-height: 56px;
    letter-spacing: -1px;
    margin-bottom: 0;
    float: left;

    &,
    &:visited {
        color: $grey-color-dark;
    }
}

.site-subtitle {
    font-size: 12px;
    line-height: 56px;
    letter-spacing: 0px;
    margin-left: 1.5em;
    margin-bottom: 0;
    float: left;

    &,
    &:visited {
        color: $grey-color-dark;
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
        font-size: 18px;
        font-family: "Abril Fatface";
        color: $text-color;
        line-height: $base-line-height;

        // Gaps between nav items, but not on the first one
        &:not(:first-child) {
            margin-left: 20px;
        }
    }

    @include media-query($on-palm) {
        position: absolute;
        top: 9px;
        right: 30px;
        background-color: $background-color;
        border: 1px solid $grey-color-light;
        border-radius: 5px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;
        }
    }
}



/**
 * Site footer
 */
.site-footer {
    border-top: 1px solid $grey-color-light;
    padding: 39px 0;
}

.site-footer-2 {
    border-top: 1px solid $grey-color-light;
    padding: 20px 0;
}

.footer-heading {
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
    list-style: none;
    margin-left: 0;
}

.footer-col-wrapper {
    font-size: 15px;
    color: $grey-color;
    margin-left: -$spacing-unit / 2;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
}

.footer-col-1 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
    width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
    width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}



/**
 * Page content
 */
.page-content {
    padding-top: $spacing-unit;
    padding-left: 0;
    padding-right: 0;
    padding-bottom: 6em;
}

.page-heading {
    font-size: 20px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    display: block;
    font-size: 24px;
}



/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    text-align: center;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-content {
    margin-bottom: $spacing-unit;

    h2 {
        font-size: 32px;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }
}

/**
 * Projects
 */
.title {
    margin-bottom: 9em;
}

.title h1, .title h2 {
    text-align: center;
}

.title h1 {
    font-weight: 400;
    font-size: 4em;
    margin-bottom: 0;
    font-family: "Abril Fatface";
}

.title h2 {
    font-family: "Roboto";
    font-weight: 300;
}

.project {
    width: 24%;
    float: left;

    @include media-query($on-palm) {
        width: 100%;
    }
}

.project + .project {
   margin-left: 1.33%;

    @include media-query($on-laptop) {
        margin-left: 0;
    }
}

.likes {
    width: 19%;
    float: left;

    @include media-query($on-palm) {
        width: 100%;
    }
}

.likes + .likes {
   margin-left: 1.25%;

    @include media-query($on-laptop) {
        margin-left: 0;
    }
}

.likes img {
	width: 150px;
}

.project-header {
    margin-top: 1em;
}

.project-header h1 {
    text-align: center;
    font-family: "Abril Fatface";
    font-size: 1.2em;
    margin: 0;
    padding: 0;
}

.project-header h2 {
    text-align: center;
    font-size: 0.85em;
    font-family: "Roboto";
    font-weight: 300;
    margin: 0;
    padding: 0;

}

.red {
    color: red !important;
}

/**
 * About
 */

.left-column, .right-column {  
    padding: 1.25em; 
    margin: .5em; 
}

@media screen and (min-width: 47.5em ) {

    .columns-container { 
        float: left;
    }

  .left-column { 
    width: 15.75em;
    margin-right: -19.3em;
    float: left;
  }

    .right-column { 
    margin-left: 20em;
    float: left;
  }   
}

.bottom-row {
    clear: both;
    float: left;
}



.p1 {
    font-size: 2.5em;
}

.p2 {
    @media screen and (min-width: 47.5em ) {
        margin-left: 5em;
    }
    font-size: 2em;
    margin-bottom: 1.25em;
    margin-top: 1.25em;
}

.p3 {
    font-size: 1.25em;
    @media screen and (min-width: 47.5em ) {
        margin-right: 7.5em;
    }
}

/**
 * Image with caption
 */

.image-wrapper {
    text-align: center;

    .image-caption {
        color: $grey-color;
        margin-top: $spacing-unit / 3;
        font-weight: 700;
    }
}

/**
 * Project pages
 */

.post-content h2 {
    text-align: center;
}

.more-projects h1 {
    text-align: center;
}

.project-wrapper {
    max-width: 750px;
    margin-left: auto;
    margin-right: auto;
}

.project-wrapper > .project {
    width: initial;
}

